bug 850797 - add nsIDocument::IsVisibleConsideringAncestors() r=bz